# chronicle

./: .gitignore  README.md  compose.yml  cookies.txt  shell.nix  test.sh
.github/workflows/: shuttle.yml  vercel.yml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  Secrets.dev.toml  api.json  build.sh  compose.yml  config.example.toml  example.env  run.sh  test.sh  test.xlsx
backend/debug/: export.csv  export.xlsx  import.csv  test.json  test.sql  test_data.fish  test_data.sh  test_table.fish  test_table.sh  test_user.fish  test_viz.fish  test_viz.sh
backend/debug/data/: export_test-2025-12-02 20:24:19.692977299 UTC.csv  export_test.xlsx  import.csv  import.xlsx
backend/migrations/: 01_setup.sql  02_user.sql  03_table.sql  04_field.sql  05_dashboard.sql  06_chart.sql  07_axis.sql  08_access_views.sql  1_setup.sql  2_app_user.sql  2_user.sql  3_app_table.sql  3_dynamic_table.sql  3_table.sql  3_table_metadata.sql  4_app_field.sql  4_field.sql  4_table_field.sql  9_test_data.sql
backend/src/: auth.rs  config.rs  docs.rs  error.rs  extractor.rs  lib.rs  main.rs  test_util.rs  users.rs
backend/src/_entity/: mod.rs  table_metadata.rs  user.rs
backend/src/api/: access.rs  error.rs  mod.rs  users.rs
backend/src/api/data/: entries.rs  fields.rs  mod.rs  tables.rs
backend/src/api/routes/: field.rs  mod.rs  table.rs  tables.rs  user.rs
backend/src/api/tests/: data.rs
backend/src/api/viz/: axes.rs  charts.rs  dashboards.rs  mod.rs
backend/src/builder/: field.rs  table.rs
backend/src/db/: access.rs  entries.rs  fields.rs  mod.rs  tables.rs  users.rs
backend/src/db/data/: entries.rs  fields.rs  mod.rs  tables.rs
backend/src/db/viz/: axes.rs  chart.rs  charts.rs  dashboard.rs  dashboards.rs  mod.rs
backend/src/db/viz/charts/: axes.rs  mod.rs
backend/src/entity/: table_field.rs  table_metadata.rs
backend/src/http/: mod.rs  test.rs  user.rs
backend/src/io/: data.rs  mod.rs
backend/src/model/: access.rs  entries.rs  fields.rs  mod.rs  tables.rs  users.rs
backend/src/model/data/: entries.rs  fields.rs  mod.rs  tables.rs
backend/src/model/viz/: axes.rs  chart.rs  charts.rs  dashboards.rs  mod.rs  plot.rs
backend/src/model/viz/charts/: axes.rs  mod.rs
backend/src/query/: fields.rs  mod.rs  tables.rs
backend/src/routes/: auth.rs  entries.rs  extractor.rs  fields.rs  mod.rs  tables.rs  tests.rs  users.rs
backend/src/routes/data/: entries.rs  fields.rs  mod.rs  tables.rs
backend/src/routes/tests/: crud.rs  data.rs  mod.rs  utils.rs
backend/src/routes/viz/: axes.rs  chart.rs  charts.rs  dashboards.rs  mod.rs  plot.rs
backend/src/routes/viz/charts/: axes.rs  mod.rs
backend/testing/: import.csv  import.xlsx
backend/tests/: api.rs
frontend/: .gitignore  Dockerfile  build.sh  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: api.ts  types.d.ts  user.svelte.ts
frontend/src/lib/api/: access.ts  base.ts  dashboard.ts  dataManagement.ts  index.ts  login.ts  user.ts  userManagement.ts
frontend/src/lib/components/: AccessManagementModal.svelte  ConfirmButton.svelte  VariableInput.svelte
frontend/src/lib/components/charts/: Chart.svelte  ChartDisplay.svelte  ChartJSChart.svelte  D3Chart.svelte
frontend/src/lib/components/dataManagement/: FieldEditor.svelte  TableEditor.svelte  types.ts
frontend/src/lib/types/: access.ts  base.ts  dashboard.ts  dataManagement.ts  index.ts  user.ts  userManagement.ts
frontend/src/routes/: +layout.svelte  +page.svelte  test.svelte
frontend/src/routes/(authGuarded)/: +layout.svelte
frontend/src/routes/(authGuarded)/dashboards/: +layout.svelte  +layout.ts  +page.svelte  DashboardEditor.svelte  types.ts
frontend/src/routes/(authGuarded)/logout/: +page.svelte
frontend/src/routes/(authGuarded)/tables/: +layout.svelte  +layout.ts  +page.svelte  FieldEditor.svelte  types.ts  (+1 more)
frontend/src/routes/dashboards/: +page.svelte  DashboardEditor.svelte
frontend/src/routes/logout/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/tables/: +page.svelte  +page.ts  DataTable.svelte  FieldEditor.svelte  TableEditor.svelte
frontend/src/routes/users/: +page.svelte
frontend/test/browser-component-testing/: setup.ts  test-extensions.ts
frontend/test/browser-component-testing/mocks/: env.ts  navigation.ts
frontend/test/browser-component-testing/routes/: layout.test.ts  page.test.ts
frontend/test/system-testing/: setup.ts
frontend/test/system-testing/routes/: page.test.ts
frontend/test/unit-testing/: setup.ts
frontend/test/unit-testing/.svelte-kit/: ambient.d.ts
terraform/: .gitignore  README.md  apply.sh  backend.example.hcl  backend.tf  database.tf  frontend.tf  main.tf  values.example.tfvars  variables.tf
terraform/cloudbuild/: backend.cd.yaml  backend.ci.yaml  build.yaml  cd.yaml  frontend.cd.yaml  frontend.ci.yaml
terraform/scripts/: apply.sh  build.sh  init.sh
wiki/: Client-Meetings.md  Deployment.md  Design.md  Home.md  Initial-Project-Proposal.md  Installation.md  References.md  Requirements.md  TA-meetings.md  Testing.md  User-Guide.md
(+32 files in other folders)
