[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
axum-macros = "0.5"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Database client
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "rust_decimal",
] }

# Axum builds on Tower types
tower = "0.5"
tower-http = { version = "0.6", features = [
  "catch-panic",
  "compression-full",
  "sensitive-headers",
  "timeout",
  "trace",
  "cors",
] }

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# Add serde feature to sqlx types
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"]}

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization/Deserialization of types
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_with = "3.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Iterator utilities
itertools = "0.14"

[dev-dependencies]
mime = "0.3"
