[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "tower-log"] }
axum-macros = "0.5"

# Cloud deployment with shuttle.dev
shuttle-runtime = "0.53"
shuttle-axum = "0.53"
shuttle-shared-db = { version = "0.53", features = ["postgres", "sqlx"] }


# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# Database client
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "rust_decimal",
] }

# Tower types for Axum
tower = "0.5"
tower-http = { version = "0.6", features = [
  "catch-panic",
  "compression-full",
  "sensitive-headers",
  "timeout",
  "trace",
  "cors",
] }
tower-sessions = { version = "0.14", default-features = false, features = [
  "signed",
] }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
time = "0.3"

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

# Add serde feature to sqlx types
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization/Deserialization of types
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = "3.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Iterator utilities
itertools = "0.14"

# Import/export excel
umya-spreadsheet = "2.2"

# Import/export csv
csv = "1.3"

# Number conversions
num-traits = "0.2"

# User authentication and authorization
axum-login = "0.17"
password-auth = "1.0"
async-trait = "0.1"
# axum-messages = "0.8"

[dev-dependencies]
mime = "0.3"
cargo-shuttle = "0.53.0"
