[package]
name = "chronicle"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "tower-log"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"

# Database client
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "rust_decimal",
] }

# Tower types for Axum
tower = "0.5"
tower-http = { version = "0.6", features = [
  "catch-panic",
  "compression-full",
  "sensitive-headers",
  "timeout",
  "trace",
  "cors",
] }
tower-sessions = { version = "0.14", default-features = false, features = [
  "signed",
] }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
time = "0.3"

# Configuration
dotenvy = "0.15"
config = "0.15"

# Add serde feature to sqlx types
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.37", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization/Deserialization of types
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = "3.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Import/export
umya-spreadsheet = "2.3"
csv = "1.3"

# User authentication and authorization
axum-login = "0.18"
password-auth = "1.0"
jsonwebtoken = "9.3"
async-trait = "0.1"
# axum-messages = "0.8"

# OpenAPI documenation
aide = { version = "0.15", features = [
  "axum",
  "axum-json",
  # "axum-query",
  "axum-form",
  # "axum-extra-headers",
  "macros",
  "swagger"
] }
schemars = { version = "0.9", features = ["uuid1", "chrono04"] }


# Utility
# url = "2.5.7"
num-traits = "0.2"
itertools = "0.14"
base64 = "0.22"

[dev-dependencies]
mime = "0.3"
